Dibuat menggunakan Colab

--- a/Tugas_Pertemuan_11_4112322009_Iksan_Nur_Afiah.ipynb
+++ b/Tugas_Pertemuan_11_4112322009_Iksan_Nur_Afiah.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM0aAK1f197nA2rT6tKN72j",
+      "authorship_tag": "ABX9TyNwhuGG9qBT7QhPzcTqa2Uk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6133,7 +6133,7 @@
         "* Persentase pembayaran penuh rendah: 0.08\n",
         "* Tenure hampir 1 tahun: 11.44 bulan\n",
         "\n",
-        "Pengguna dalam cluster ini tidak terlalu aktif. Mereka jarang bertransaksi dan jarang memperbarui saldo. Pembelian dilakukan sesekali dalam jumlah besar (one-off), menunjukkan perilaku yang sporadis. Meskipun cash advance dilakukan, transaksinya masih sedikit. Persentase pembayaran penuh juga rendah.\n",
+        "Pengguna dalam klaster ini tidak terlalu aktif. Mereka jarang bertransaksi dan jarang memperbarui saldo. Pembelian dilakukan sesekali dalam jumlah besar (one-off), menunjukkan perilaku yang sporadis. Meskipun cash advance dilakukan, transaksinya masih sedikit. Persentase pembayaran penuh juga rendah.\n",
         "\n",
         "**B. Cluster 1 – \"Pengguna Aktif & Disiplin Finansial\"**\\\n",
         "Statistik Kunci:\n",
@@ -6147,7 +6147,7 @@
         "* Pembayaran minimum juga cukup: 630.88\n",
         "* Persentase pembayaran penuh baik: 0.27\n",
         "\n",
-        "Pengguna dalam cluster ini adalah tipe pengguna yang aktif bertransaksi tetapi masih bertanggung jawab dalam pembayaran. Pembelian dilakukan cukup sering baik dalam bentuk sekali beli maupun cicilan. Jarang menggunakan cash advance dan melakukan pembayaran dengan cukup disiplin.\n",
+        "Pengguna dalam klaster ini adalah tipe pengguna yang aktif bertransaksi tetapi masih bertanggung jawab dalam pembayaran. Pembelian dilakukan cukup sering baik dalam bentuk sekali beli maupun cicilan. Jarang menggunakan cash advance dan melakukan pembayaran dengan cukup disiplin.\n",
         "\n",
         "**C. Cluster 2 – \"Penarik Tunai Intensif\"**\\\n",
         "Statistik Kunci:\n",
@@ -6160,7 +6160,7 @@
         "* Pembayaran minimum besar: 1996.14\n",
         "* Persentase pembayaran penuh sangat rendah: 0.04\n",
         "\n",
-        "Pengguna dalam cluster ini sangat sering dan besar dalam mengambil cash advance, namun tidak terlalu aktif dalam pembelian. Frekuensi pembelian rendah dan lebih memilih tarik tunai. Meskipun mereka membayar dalam jumlah besar, jarang membayar penuh.\n",
+        "Pengguna dalam klaster ini sangat sering dan besar dalam mengambil cash advance, namun tidak terlalu aktif dalam pembelian. Frekuensi pembelian rendah dan lebih memilih tarik tunai. Meskipun mereka membayar dalam jumlah besar, jarang membayar penuh.\n",
         "\n",
         "**D. Cluster 3 – \"High Spender yang Stabil\"**\\\n",
         "Statistik Kunci:\n",
@@ -6174,7 +6174,7 @@
         "* Pembayaran besar: 6105.07\n",
         "* Persentase pembayaran penuh moderat: 0.29\n",
         "\n",
-        "Pengguna ini sangat aktif dan memiliki limit besar. Mereka melakukan banyak pembelian (baik one-off maupun cicilan) dan sering membayar tagihan. Mereka masih cukup bertanggung jawab, meskipun tidak selalu membayar penuh."
+        "Pengguna dalam kluster ini sangat aktif dan memiliki limit besar. Mereka melakukan banyak pembelian (baik one-off maupun cicilan) dan sering membayar tagihan. Mereka masih cukup bertanggung jawab, meskipun tidak selalu membayar penuh."
       ],
       "metadata": {
         "id": "zDBn-yO7_2S2"
@@ -6300,7 +6300,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 226
+          "height": 239
         },
         "id": "cTgjxrEJ7NgC",
         "outputId": "6fc609ba-862a-43fb-ef62-07a917c73a5e"
@@ -6709,6 +6709,69 @@
           "execution_count": 96
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Berikut adalah analisis hasil Hierarchical Clustering yang membentuk 4 klaster berdasarkan pola penggunaan kartu kredit, berikut adalah hasil analisis untuk masing-masing cluster berdasarkan perilaku pengguna kartu kredit:\n",
+        "\n",
+        "**A. Cluster 0 – Pengguna Umum & Moderat**\\\n",
+        "Statistik Kunci:\n",
+        "* Saldo rendah: 913.97\n",
+        "* Frekuensi saldo sedang: 0.79\n",
+        "* Pembelian moderat: 421.75\n",
+        "* One-off pembelian dominan: 294.28\n",
+        "* Cash advance sedang: 493.65\n",
+        "* Frekuensi pembelian rendah: 0.32\n",
+        "* Frekuensi cash advance rendah: 0.09\n",
+        "* Jumlah transaksi kecil: 5.75\n",
+        "* Persentase pembayaran penuh rendah: 0.12\n",
+        "\n",
+        "Pengguna dalam klaster ini melakukan pembelian moderat, lebih condong ke pembelian langsung daripada cicilan. Jumlah transaksi dan penggunaan tunai tergolong rendah. Mereka tampak sebagai pengguna biasa dengan perilaku konservatif dan frekuensi transaksi rendah.\n",
+        "\n",
+        "**B. Cluster 1 – \"Big Spender Bertanggung Jawab\"**\\\n",
+        "Statistik Kunci:\n",
+        "* Saldo tinggi: 3548.91\n",
+        "* Pembelian sangat tinggi: 8873.3\n",
+        "* One-off dan cicilan besar: >6000 dan >2700\n",
+        "* Cash advance cukup rendah: 703.25\n",
+        "* Frekuensi pembelian tinggi: 0.92\n",
+        "* Frekuensi cash advance sangat rendah: 0.07\n",
+        "* Jumlah transaksi pembelian sangat tinggi: 98.57\n",
+        "* Pembayaran sangat tinggi: 8273.11\n",
+        "* Pembayaran penuh cukup baik: 0.34\n",
+        "\n",
+        "Pengguna dalam klaster ini sangat aktif dan berbelanja dalam jumlah besar, namun jarang menggunakan cash advance. Mereka juga melakukan pembayaran dalam jumlah besar, dengan tingkat pembayaran penuh yang cukup baik. Ini menunjukkan mereka memiliki kontrol finansial yang baik meskipun pengeluaran tinggi.\n",
+        "\n",
+        "**C. Cluster 2 – \"Pengguna Dominan Tarik Tunai\"**\\\n",
+        "Statistik Kunci:\n",
+        "* Saldo tinggi: 3868.94\n",
+        "* Pembelian rendah: 463.36\n",
+        "* Cash advance sangat tinggi: 3565.89\n",
+        "* Frekuensi cash advance tinggi: 0.41\n",
+        "* Transaksi tunai tinggi: 11.86\n",
+        "* Frekuensi pembelian rendah: 0.24\n",
+        "* Persentase pembayaran penuh sangat rendah: 0.04\n",
+        "\n",
+        "Pengguna dalam klaster ini memiliki kebiasaan menarik uang tunai dalam jumlah besar dan cukup sering, sementara pembelian kartu sangat rendah. Ini bisa menjadi indikator risiko, terutama karena pembayaran penuh sangat jarang dilakukan. Perilaku ini menunjukkan ketergantungan pada fitur tarik tunai.\n",
+        "\n",
+        "**D. Cluster 3 – \"Pengguna Aktif & Seimbang\"**\\\n",
+        "Statistik Kunci:\n",
+        "* Saldo rendah-sedang: 1039.41\n",
+        "* Pembelian tinggi: 1585.28\n",
+        "* Pembelian one-off dan cicilan seimbang: ~744 vs ~840\n",
+        "* Cash advance rendah: 229.18\n",
+        "* Frekuensi pembelian tinggi: 0.92\n",
+        "* Frekuensi cash advance sangat rendah: 0.04\n",
+        "* Transaksi sedang: 28.01\n",
+        "* Pembayaran sedang: 1678.53\n",
+        "* Pembayaran penuh cukup baik: 0.28\n",
+        "\n",
+        "Pengguna dalam klaster ini aktif melakukan pembelian baik secara langsung maupun cicilan. Jarang menggunakan cash advance dan memiliki perilaku pembayaran yang cukup sehat. Mereka tampak sebagai pengguna aktif namun konservatif terhadap fitur tarik tunai."
+      ],
+      "metadata": {
+        "id": "zwWqXtapCraI"
+      }
     }
   ]
 }
